--- a/lesetraining/.settings/com.google.gdt.eclipse.core.prefs
+++ b/lesetraining/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 lastWarOutDir=C\:/workspace/lesetraining/target/lesetraining-0.1.0.BUILD-SNAPSHOT
 launchConfigExternalUrlPrefix=
-warSrcDir=src/main/webapp
+warSrcDir=target/lesetraining-0.1.0.BUILD-SNAPSHOT
 warSrcDirIsOutput=false
