--- a/lesetraining/pom.xml
+++ b/lesetraining/pom.xml
@@ -31,6 +31,21 @@
             <name>Spring Roo Repository</name>
             <url>http://spring-roo-repository.springsource.org/release</url>
         </repository>
+        	<repository>
+            <id>maven-gae-plugin-repo</id>
+            <url>http://maven-gae-plugin.googlecode.com/svn/repository</url>
+            <name>maven-gae-plugin repository</name>
+        </repository>
+        <repository>
+            <id>DataNucleus_2</id>
+            <url>http://www.datanucleus.org/downloads/maven2/</url>
+            <name>DataNucleus</name>
+        </repository>
+        <repository>
+            <id>JBoss Repo</id>
+            <url>https://repository.jboss.org/nexus/content/repositories/releases</url>
+            <name>JBoss Repo</name>
+        </repository>
     <repository>
             <id>DataNucleus_Repos2</id>
             <url>http://www.datanucleus.org/downloads/maven2</url>
@@ -343,6 +358,11 @@
             <version>2.5.0</version>
             <scope>provided</scope>
         </dependency>
+<dependency>
+    <groupId>com.google.web.bindery</groupId>
+    <artifactId>requestfactory-apt</artifactId>
+    <version>2.5.0</version>
+</dependency>        
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -364,6 +384,22 @@
             <artifactId>xalan</artifactId>
             <version>2.7.1</version>
         </dependency>
+<!-- <dependency> -->
+<!--     <groupId>com.google.code.gwt-log</groupId> -->
+<!--     <artifactId>gwt-log</artifactId> -->
+<!--     <version>3.1.0</version> -->
+<!-- </dependency> -->
+<!-- <dependency> -->
+<!-- 	<groupId>com.allen-sauer.gwt.voices</groupId> -->
+<!-- 	<artifactId>gwt-voices</artifactId> -->
+<!-- 	<version>2.0.0</version> -->
+<!-- </dependency> -->
+<!-- <dependency> -->
+<!--    <groupId>org.vaadin.addons</groupId> -->
+<!--    <artifactId>gwt-graphics</artifactId> -->
+<!--    <version>1.0.0</version> -->
+<!-- </dependency> -->
+        
     </dependencies>
     <build>
         <plugins>
